test/call/bool.lox
true() // error: can only call functions and structures
